--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,9 @@
     <%= render 'layouts/header' %>
 
     <% container_class = request.path_info == root_path ? "container-full" : "container-large" %>
+
+    <% container_class = "container-normal" if !logged_in? %>
+
     <div class=<%= container_class %>>
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
@@ -64,9 +67,7 @@
             </div>
           </div>
         <% else %>
-          <div class="container">
-            <%= yield %>
-          </div>
+          <%= yield %>
         <% end %>
       <% end %>
     </div>
