--- a/app/views/layouts/welcome.html.erb
+++ b/app/views/layouts/welcome.html.erb
@@ -21,7 +21,7 @@
   <body>
     <%= render 'layouts/header' %>
 
-    <div class="container">
+    <div class="container-normal">
 
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>"><%= message %></div>
