style: change notifications container

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1619,6 +1619,9 @@ span.image {
     padding: 0 0 10px;
     margin: 0;
   }
+  .micropost-container {
+    max-width: 400px;
+  }
 }
 
 .notification-nochecked {
