--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
 
     <% container_class = request.path_info == root_path ? "container-full" : "container-large" %>
 
-    <% container_class = "container-normal" if !logged_in? %>
+    <% container_class = "container-normal" if request.path_info == notified_notifications_path || request.path_info == activity_notifications_path || !logged_in? %>
 
     <div class=<%= container_class %>>
       <% flash.each do |message_type, message| %>
