--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -299,7 +299,7 @@ h3,
 
 p {
   font-size: 1.1rem;
-  line-height: 1.3rem;
+  line-height: 1.4rem;
 }
 
 a {
@@ -1083,9 +1083,6 @@ input {
 .materials {
   list-style: none;
   padding: 0;
-  .micropost-container {
-    max-width: 720px;
-  }
   li {
     padding: 16px 0px 12px 16px;
     border-top: 1px solid #e8e8e8;
@@ -1170,6 +1167,7 @@ input {
     position: relative;
     .image-content {
       margin-bottom: 8px;
+      max-width: 720px;
     }
     img {
       width: 100%;
@@ -1930,6 +1928,7 @@ section.profile {
   display: flex;
   align-items: center;
   margin: 8px;
+  margin-top: 20px;
   border-bottom: 1.5px solid #c5c5c5;
   a {
     padding: 8px 12px;
