update: fargate and beta description

--- a/app/views/helps/show.html.erb
+++ b/app/views/helps/show.html.erb
@@ -5,6 +5,7 @@
   <ul>
     <li><%= link_to 'Google Slides 投稿方法', googleslides_help_path %></li>
     <li><%= link_to 'PowerPoint 投稿方法', powerpoint_help_path %></li>
+    <li>ベータ版ではプライバシーポリシーは基本的に<%= link_to "コチラ", "https://alfnets.info/privacy-policy", target: :_blank, rel: "noopener noreferrer" %>に準拠します。著作権等十分に配慮してご活用ください！</li>
   </ul>
 
   <%# <iframe src="https://docs.google.com/document/d/e/2PACX-1vS-J1BebsIu0CzJ4Qh499AebnAXXdWYDMNhkEwBI2aXYLnMcoKSgGo-m-akItNFSKWpyCQ2x3Zkq38U/pub?embedded=true"></iframe> %>
