--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -8,7 +8,7 @@
       </h1>
       <div class=top_description>
         <p>
-          <strong>Portcurio</strong>（ポートキュリオ）は世界中の教材を集約し、協力してブラッシュアップしていくことを目的としています。ご自身の教材のポートフォリオとしても活用してください。詳しくは<%= link_to "コチラ", "https://alfnet.info/web-dev05/", target: :_blank, rel: "noopener noreferrer" %>。
+          <strong>Portcurio</strong>（ポートキュリオ）は世界中の教材を集約し、協力してブラッシュアップしていくことを目的としています。ご自身の教材のポートフォリオとしても活用してください。詳しくは<%= link_to "コチラ", "https://alfnets.info/web-dev05/", target: :_blank, rel: "noopener noreferrer" %>。
         </p>
       </div>
     </div>
