--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,13 +3,13 @@
   <div class=<%= container_class %>>
     <small style="margin:0 16px">
       <%= link_to image_tag("logo_alfnet.png", alt: "alfnet logo", height: "28px"),
-                        "https://alfnet.info", target: :_blank, rel: "noopener noreferrer" %>
+                        "https://alfnets.info", target: :_blank, rel: "noopener noreferrer" %>
     </small>
     <nav style="margin:0 16px">
       <ul>
-        <li><%= link_to "About",  "https://alfnet.info/web-dev05/", target: :_blank, rel: "noopener noreferrer" %></li>
-        <li><%= link_to "Contact", "https://alfnet.info/contact", target: :_blank, rel: "noopener noreferrer" %></li>
-        <!--<li><%= link_to "News", "https://alfnet.info", target: :_blank, rel: "noopener noreferrer" %></li>-->
+        <li><%= link_to "About",  "https://alfnets.info/web-dev05/", target: :_blank, rel: "noopener noreferrer" %></li>
+        <li><%= link_to "Contact", "https://alfnets.info/contact", target: :_blank, rel: "noopener noreferrer" %></li>
+        <!--<li><%= link_to "News", "https://alfnets.info", target: :_blank, rel: "noopener noreferrer" %></li>-->
         <li><a href="<%= ENV["LINE_ADD_URL"] %>"><img src="https://scdn.line-apps.com/n/line_add_friends/btn/ja.png" alt="友だち追加" height="28" border="0"></a></li>
       </ul>
     </nav>
