--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Sign up') %>
 
 <h1>Sign up</h1>
-
+<div class="alert alert-warning text-left">本サービスは鋭意作成中のベータ版となります。そのため、大きな変更が随時行われる可能性があります。大きな変更が発生したりした場合には電子メールなどで連絡する場合があります。また、ベータ版ではプライバシーポリシーは基本的に<%= link_to "コチラ", "https://alfnets.info/privacy-policy", target: :_blank, rel: "noopener noreferrer" %>に準拠します。著作権等十分に配慮してご活用ください！</div>
 <div class="signup_form">
   <%= form_with(model: @user, local: true) do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
