doc: change logo

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <% container_class = request.path_info == root_path ? "container-full" : "container-large" %>
   <div class=<%= container_class %>>
     <small style="margin:0 16px">
-      <%= link_to image_tag("logo_alfnet.png", alt: "alfnet logo", height: "28px"),
+      <%= link_to image_tag("logo_alfnets.png", alt: "alfnets logo", height: "28px"),
                         "https://alfnets.info", target: :_blank, rel: "noopener noreferrer" %>
     </small>
     <nav style="margin:0 16px">
