--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1259,7 +1259,7 @@ input {
   }
   .img-container {
     background-color: #eeeeee80;
-    padding: 20px 20px 8px;
+    padding: 20px 20px 4px;
     border-radius: 16px;
     .img-wrap {
       display: flex;
@@ -1268,7 +1268,7 @@ input {
       background-repeat: no-repeat;
       aspect-ratio: 4 / 3;
       width: 100%;
-      margin-bottom: 0.5rem;
+      margin-bottom: 4px;
       img {
         width: 100%;
         object-fit: contain;
