style: change larger at textarea in user edit page

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -37,7 +37,7 @@
     <% end %>
 
     <%= f.label :profile %>
-    <%= f.text_area :profile, placeholder: "プロフィールを入力しましょう（600文字以内）", class: 'form-control' %>
+    <%= f.text_area :profile, placeholder: "プロフィールを入力しましょう（600文字以内）", class: 'form-control', style: 'height: 80px;' %>
 
     <%= f.label :website %>
     <%= f.text_field :website, placeholder: "255文字以内", class: 'form-control' %>
