feat: Grid display in the feed page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1879,6 +1879,12 @@ span.image {
   }
 }
 
+/* tag-search-container */
+.tag-search-container {
+  max-width: 800px;
+  margin: 0 auto 32px;
+}
+
 /* ユーザープロフィール画面 */
 section.profile {
   background-color: #eeeeee80;
