--- a/app/views/users/delete.html.erb
+++ b/app/views/users/delete.html.erb
@@ -1,20 +1,21 @@
 <% provide(:title, "Delete user") %>
+<div class="container-small">
+  <h1>Delete your account</h1>
 
-<h1>Delete your account</h1>
-
-<div class="profile-icon-edit" style="margin-bottom: 24px;">
-  <div class='profile-icon-frame'>
-    <%= @user.image.attached? ? (image_tag @user.image) : (gravatar_for @user) %>
+  <div class="profile-icon-edit" style="margin-bottom: 24px;">
+    <div class='profile-icon-frame'>
+      <%= @user.image.attached? ? (image_tag @user.image) : (gravatar_for @user) %>
+    </div>
   </div>
+
+  <%= form_with(model: @user, url: account_delete_path(params[:id]), local: true ) do |f| %>
+    <%= render 'shared/error_messages', object: f.object %>
+
+    <label>Name</label>
+    <p id="delete_user_page"><%= @user.name %></p>
+    <%= f.label :current_password, "Current Password" %><span class="require-charm"> *</span>
+    <%= f.password_field :current_password, class: 'form-control' %>
+
+    <%= f.submit "Send email to delete the account", class: "btn btn-primary", data: { confirm: "You sure?" }, remote: true %>
+  <% end %>
 </div>
-
-<%= form_with(model: @user, url: account_delete_path(params[:id]), local: true ) do |f| %>
-  <%= render 'shared/error_messages', object: f.object %>
-
-  <label>Name</label>
-  <p id="delete_user_page"><%= @user.name %></p>
-  <%= f.label :current_password, "Current Password" %><span class="require-charm"> *</span>
-  <%= f.password_field :current_password, class: 'form-control' %>
-
-  <%= f.submit "Send email to delete the account", class: "btn btn-primary", data: { confirm: "You sure?" }, remote: true %>
-<% end %>
