--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1190,12 +1190,16 @@ input {
           align-items: center;
           width: 100%;
           height: 100%;
-          img {
+          a {
             aspect-ratio: 16 / 9;
             width: 100%;
-            object-fit: contain;
-            object-position: 50% 50%;
-            padding-bottom: 8px;
+            img {
+              aspect-ratio: 16 / 9;
+              width: 100%;
+              object-fit: contain;
+              object-position: 50% 50%;
+              padding-bottom: 8px;
+            }
           }
         }
         iframe {
