--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,15 +23,15 @@
       <span class="icon-bar"></span>
     </button>
     <div class="navbar-header">
-      <%= link_to image_tag("logo_portcurio.png", alt: "portcurio logo", height: "100%"), root_path, 'data-turbolinks': false, id: "service_logo" %>
+      <%= link_to image_tag("logo_portcurio.png", alt: "portcurio logo", height: "100%"), root_path, id: "service_logo" %>
       <%= render partial: 'layouts/keyword_search_form', locals: { keywords: @keywords } %>
     </div>
     <nav role="navigation">
       <div class="navbar-offcanvas navbar-offcanvas-touch navbar-offcanvas-right" id="js-bootstrap-offcanvas">
         <ul class="nav navbar-nav navbar-right" id="navbar">
-          <li><%= link_to "Home", root_path, 'data-turbolinks': false %></li>
+          <li><%= link_to "Home", root_path %></li>
           <% if logged_in? %>
-            <li><%= link_to "MyPortcurio", portcurio_index_path, 'data-turbolinks': false %></li>
+            <li><%= link_to "MyPortcurio", portcurio_index_path(micropost: { educational_material: true }) %></li>
           <% end %>
             <li><%= link_to "Links", links_path %></li>
             <li><%= link_to "Feed", microposts_path(micropost: { educational_material: true }) %></li>
@@ -45,7 +45,7 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "Activity", activity_notifications_path %></li>
                 <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "Settings", edit_user_path(current_user), 'data-turbolinks': false %></li>
+                <li><%= link_to "Settings", edit_user_path(current_user) %></li>
                 <li><%= link_to "Log out", logout_path %></li>
               </ul>
             </li>
