--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1077,9 +1077,6 @@ input {
       border-top: none;
     }
   }
-  .notification:first-child {
-    border-top: none;
-  }
 
   .user {
     display: flex;
@@ -1607,7 +1604,7 @@ span.image {
 .notification {
   position: relative;
   padding: 10px 20px 0;
-  border-top: 1px solid #e8e8e8;
+  border-bottom: 1px solid #e8e8e8;
   p.notification_info {
     padding: 0 0 10px;
     margin: 0;
@@ -1633,11 +1630,6 @@ span.image {
 
 .jscroll {
   li:first-child {
-    border-top: 1px solid #e8e8e8;
-  }
-}
-.jscroll-reaction {
-  .notification:first-child {
     border-top: 1px solid #e8e8e8;
   }
 }
@@ -1886,7 +1878,13 @@ span.image {
 /* tag-search-container */
 .tag-search-container {
   max-width: 800px;
-  margin: 0 auto 32px;
+  margin: 0 auto 24px;
+}
+
+.tag-search-container.user {
+  max-width: 800px;
+  margin: 24px auto;
+  padding: 0 16px;
 }
 
 /* ユーザープロフィール画面 */
