--- a/app/views/react_welcome.html.erb
+++ b/app/views/react_welcome.html.erb
@@ -27,7 +27,8 @@
         <div class="alert alert-<%= message_type %>"><%= message %></div>
       <% end %>
 
-      <div id="root"></div>
+      <div id="app-root"></div>
+      <div id="app-props" data-props=<%= @props %>>
       
       <%= render 'layouts/footer' %>
       <%= debug(params) if Rails.env.development? %>
