--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
       <span class="icon-bar"></span>
     </button>
     <div class="navbar-header">
-      <%= link_to image_tag("logo_portcurio.png", alt: "portcurio logo", height: "100%"), root_path, id: "service_logo" %>
+      <%= link_to image_tag("logo_portcurio.png", alt: "portcurio logo", style: "height: 100%;"), root_path, id: "service_logo" %>
       <%= render partial: 'layouts/keyword_search_form', locals: { keywords: @keywords } %>
     </div>
     <nav role="navigation">
