--- a/app/views/react.html.erb
+++ b/app/views/react.html.erb
@@ -30,6 +30,7 @@
     
     <%= stylesheet_link_tag 'application', media: 'all',
                                'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag 'bootstrap.offcanvas.min', media: 'all',
                                'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application',
